Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57697

Incorrect message of licensing options of About Qt dialog

XMLWordPrintable

    • All
    • ee91993997161635b8288aa95d9ecf8af5ecd589 (qt/qtbase/5.12) 5242540ee4bb507b81b9dc78280db61e7bd56520 (qt/qtbase/5.12)

      According to src/widgets/dialogs/qmessagebox.cpp of qtbase, it states:
      "<p>Qt is available under three different licensing options designed "
      "to accommodate the needs of our various users.</p>"

      Although as of master, it only lists two options: commercial and LGPLv3. While this could be corrected inside the translation, this can affect i18n string freeze.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vitaly.fanaskov Vitaly Fanaskov
            peremen Shinjo Park
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes