Fix message about licensing options in the About Qt box

Removed versions count.
Replaced "different" -> "multiple".

Fixes: QTBUG-57697
Change-Id: I924e4706a089fe244f0ea6c3a660a8a4529502a2
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>